fix font stack on firefox / linux

--- a/site/assets/css/inline.css
+++ b/site/assets/css/inline.css
@@ -13,7 +13,7 @@ html {
   font-size: 100%;
   background-color: white;
   color: black;
-  font-family: -apple-system, BlinkMacSystemFont, “Roboto”, “Droid Sans”, “Helvetica Neue”, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, Droid Sans, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
 
 code, pre {
